welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: type mismatch;
 found   : Int(80)
 required: Boolean
	} else if ((61<=speed<=80 && isBirthday == false) || ( 66<=speed<=85 && isBirthday == true))  { 
                               ^